remove experimental java features requirement