@@ -28,7 +28,6 @@ java {
 tasks.withType(JavaCompile).configureEach {
     sourceCompatibility = targetCompatibility = "20"
     options.encoding = "UTF-8"
-    options.compilerArgs.addAll(["--enable-preview"])
 }
 
 repositories {
@@ -227,7 +226,7 @@ tasks.register('run', JavaExec) {
                "-XX:G1RSetUpdatingPauseTimePercent=0", "-XX:MaxTenuringThreshold=1", "-XX:G1SATBBufferEnqueueingThresholdPercent=30",
                "-XX:G1ConcMarkStepDurationMillis=5.0", "-XX:G1ConcRSHotCardLimit=16",
                "-XX:GCTimeRatio=99",
-               "-Djdk.virtualThreadScheduler.parallelism=4", "-Djava.util.concurrent.ForkJoinPool.common.parallelism=16", "--enable-preview"]
+               "-Djdk.virtualThreadScheduler.parallelism=4", "-Djava.util.concurrent.ForkJoinPool.common.parallelism=16"]
 }
 
 tasks.withType(JavaExec).configureEach {
